# Compilation-principle

./: CMakeLists.txt  README.md  input.text  lex.yy.c  pascal_s.l
Lexical/: Reademe  main.c  output.text  tokens.h
Semantic analysis/pascal2C/: CMakeLists.txt  annotated_ast.txt  ast.c  ast.h  main.c  output.c  output.txt  semantic.c  symbol_table.txt
Syntax Analysis/: CMakeLists.txt  ast.txt  input.txt  lex.yy.c  lexer.l  main.c  output.txt  parser.y  y.output  y.tab.c  y.tab.h
file/: CMakeLists.txt  main.cpp
file/another/: c_builder.cpp  c_builder.hpp  log.cpp  settings.cpp  settings.hpp  thpool.cpp
file/ast/: ast_stmt.cpp  ast_stmt.hpp  ast_visitor.hpp  print.cpp  stmt.cpp  stmt_print.cpp  stmt_print.hpp
file/ir_opt/: const.cpp  const_expr.cpp  const_expr.hpp  ir.cpp  ir_core.cpp  ir_core.hpp  ir_gen.cpp  ir_gen.hpp  opt.hpp
file/lexical_pasrser/: gen_parser.sh  lex.cpp  lex.l  lex_pascal.cpp  lex_pascal.l  token.cpp  token.hpp  yacc.cpp  yacc.hpp  yacc.y  yacc_pascal.cpp  yacc_pascal.y
intermediate code generation/: README.md  requirements.txt  test_ast_to_ir.py  test_ir_to_c.py
intermediate code generation/ir_generator/: __init__.py  ast_nodes.py  ast_to_ir.py  ir_nodes.py  ir_to_c.py
new_error_set/: 0_missing_program_name.pas  10_mismatched_types.pas  11_missing_semicolon.pas  1_incorrect_const_assignment.pas  2_missing_var_type.pas  3_incomplete_assignment.pas  4_incomplete_expression.pas  5_keyword_typo.pas  6_undeclared_identifier.pas  7_missing_procedure_body.pas  8_multiple_errors.pas  9_incorrect_array_declaration.pas  README.md
